--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <h1>Hello world!</h1>
+  <h1>Welcome!</h1>
+  <p>We're still working on getting more details here, but you're in the right place. See you soon!</p>
 </html>
